...
            "state" : "translated",
            "value" : "助手信息"
          }
        }
      }
    },
    "Assistants" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "助手"
          }
...
            "state" : "translated",
            "value" : "不分享"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "完成"
          }
...
            "state" : "translated",
            "value" : "电子邮件"
          }
        }
      }
    },
    "Enabled" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "已启用"
          }
...
            "state" : "translated",
            "value" : "输入值..."
          }
        }
      }
    },
    "Error" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "错误"
          }
...
            "state" : "translated",
            "value" : "扩展信息"
          }
        }
      }
    },
    "Extensions" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "扩展"
          }
...
            "state" : "translated",
            "value" : "长度"
          }
        }
      }
    },
    "Linda" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Linda"
          }
...
            "state" : "translated",
            "value" : "RxAuth"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
...
